# Custom-V4L2-Camera-Driver-with-YOLOv8-TensorRT-Object-detection

./: CMakeLists.txt  README.md
.cache/clangd/index/: C270Capture.cpp.3A5178A3786906C8.idx  C270Capture.h.AF22B83BD0D9ECE1.idx  Test_open_close_Cam.h.3084EF1EF67F7CB9.idx  chrono.E17ABF0F77A5FD39.idx  istream.08C1169ABB1C2256.idx  main.cpp.45739CA8EB8A5A5E.idx  parse_numbers.h.0C44065163342B3D.idx  ratio.EB9327D7D8EB4617.idx  stdio.h.39AA179546A5CA11.idx  this_thread_sleep.h.D3BA1A1CFB05F564.idx  thread.D38CC035E633841B.idx  tuple.5E2A19BCF5ED5A04.idx  types.h.DF710828D4F6AF21.idx  unique_ptr.h.CA4AF0B8829DF930.idx  unistd.h.68BBC423E04E55AB.idx  v4l2-common.h.9899DDAEB939390A.idx  v4l2-controls.h.C60735AD9D21145D.idx  videodev2.h.9A9251A447AA6EA6.idx  wchar.h.A65FEA87E595D0B5.idx
UnitTest/: Test_open_close_Cam.cpp
drivers/: C270Capture.cpp
include/: C270Capture.h  Test_open_close_Cam.h
src/: main.cpp
tools/: capture_test_example.c  jetson-nano-obstacle-detection-checklist.md
